fix: menu height overflow

--- a/ui/css/base-styles.scss
+++ b/ui/css/base-styles.scss
@@ -8,6 +8,8 @@
   --width-sm: 576px;
   --width-max: 798px;
   --width-max-sidepanel: 490px;
+
+  --header-height: 68px;
 }
 
 html,
